# fca4j-project

./: .gitignore  .project  README.md  build-native.bat  deploy-guide.md  pom.xml
.github/workflows/: build-fat-jar.yml
fca4j-app/: .project  pom.xml  pom2.xml
fca4j-app-light/: .project  example0.5.2.dot  pom.xml
fca4j-app-light/desc/: Context from SLF0Concept.datalog  Context from SLF1Concept.datalog  Context from SLF2Concept.datalog  Context from SLF3Concept.datalog  Context from SLF4Concept.datalog  Context from SLF5Concept.datalog  Context from SLF6Concept.datalog  Context from SLF7Concept.datalog  Context from SLF8Concept.datalog  Context from SLF9Concept.datalog
fca4j-app-light/rca_output/: step0-0.txt  step0-1.txt  step0-2.txt  step1-0.txt  step1-1.txt  step1-2.txt  step2-0.txt  step2.dot
fca4j-app-light/result/: Context from CSV0Rules.txt  Context from CSV100Rules.txt  Context from CSV101Rules.txt  Context from CSV102Rules.txt  Context from CSV103Rules.txt  Context from CSV104Rules.txt  Context from CSV105Rules.txt  Context from CSV106Rules.txt  Context from CSV107Rules.txt  Context from CSV108Rules.txt  Context from CSV109Rules.txt  Context from CSV10Rules.txt  Context from CSV110Rules.txt  Context from CSV111Rules.txt  Context from CSV112Rules.txt  Context from CSV113Rules.txt  Context from CSV114Rules.txt  Context from CSV115Rules.txt  Context from CSV116Rules.txt  Context from CSV117Rules.txt  Context from CSV118Rules.txt  Context from CSV119Rules.txt  Context from CSV11Rules.txt  Context from CSV120Rules.txt  Context from CSV121Rules.txt  Context from CSV122Rules.txt  (+392 more)
fca4j-command/: .project  pom.xml
fca4j-core/: .project  pom.xml
fca4j-core-natif/: .project  compile_win.bat
fca4j-core-natif/src/main/native/: CMakeLists.txt  fca4j_jni.c  fr_lirmm_fca4j_core_natif_NativeBridge.h
fca4j-core-natif/src/main/native/algo/: addextent.c  addextent.h  dbasis.c  dbasis.h  hermes.c  hermes.h  latticecbo.c  latticecbo.h  lincbo.c  lincbo.h  pluton.c  pluton.h
fca4j-core-natif/src/main/native/core/: clarification.c  clarification.h  closure.c  closure.h  conceptorder.c  conceptorder.h  context.c  context.h  fca4j_common.h  graph.c  graph.h  implication.c  implication.h  strbuf.c  strbuf.h  tarjan.c  tarjan.h
fca4j-core-natif/src/main/native/croaring/: roaring.c  roaring.h
fca4j-io/: .project  LICENCE.txt  pom.xml
fca4j-iset/: .project  pom.xml
fca4j-iset-ext/: .project  pom.xml
(+201 files in other folders)
